Update de l'id du select

--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 
         <p class="row">
             <label for="fprenom" class="form-label">Prenom : </label>
-            <input type="text" name="prenom"  class="form-control">
+            <input type="text" id="fprenom" name="prenom"  class="form-control">
         </p>
 
         <p class="row">
             <label for="fnom" class="form-label">Nom : </label>
-            <input type="text" name="nom"  class="form-control">
+            <input type="text" id="fnom" name="nom"  class="form-control">
         </p>
 
         <p class="row">
             <label for="femail" class="form-label">Email : </label>
-            <input type="email" name="email"  class="form-control">
+            <input type="email" id="femail" name="email"  class="form-control">
         </p>
 
         <p class="row">
             <label for="ftelephone" class="form-label">Telephone : </label>
-            <input type="text" name="telephone"  class="form-control">
+            <input type="text" id="ftelephone" name="telephone"  class="form-control">
         </p>
 
         <p class="row">
             <label for="fsujet" class="form-label">Choisis un sujet: </label>
             
-            <select id="cars" name="sujet" class="form-control">
+            <select id="fsujet" name="sujet" class="form-control">
                 <option value="Commande non reçue">Commande non reçue</option>
                 <option value="Commande erronée">Commande erronée</option>
               </select>
@@ -43,7 +43,7 @@
 
         <p class="row">
             <label for="fmessage" class="form-label">Message : </label>
-            <textarea rows="10" cols="30" name="message"  class="form-control" ></textarea>
+            <textarea id="fmessage" rows="10" cols="30" name="message"  class="form-control" ></textarea>
         </p>
 
         <p class="text-center">
